# PHM

./: README.md
1/2-prepare-dataset/: 2-convert-to-evalscope-format.sh  3-split-dataset.sh  prepare_dataset.py
1/3-eval-llm/1-eval/: eval-original.py
1/3-eval-llm/2-vllm/: 4-launch-finetuned-qwen.sh  6-vllm-validation.sh  pyproject.toml
1/3-eval-llm/3-app/: 7-check-eval-result.sh  pyproject.toml
1/5-train-vl/: pyproject.toml
1/6-vllm-vl/: 2-launch-vllm-for-validation.sh
2/2-validation/: 1-valid-llm.sh  validation.py
2/3-service/v1/: fastapi_v1_file.py  launch-fastapi-v1.sh  pyproject.toml
2/3-service/v2/: launch-fastapi-v2.sh  pyproject.toml
2/3-service/v3/: fastapi_v3_vllm.py  launch-fastapi-v3.sh
2/3-service/v4/: pyproject.toml
day1/2-eval-llm/: 1-install-nltk-data.sh  2-launch-orginal-qwen.sh  6-vllm-validation.sh  eval-finetuned.py  pyproject.toml
day1/2-prepare-dataset/: 1-prepare-dataset.sh  convert_to_evalscope_format.py  prepare_dataset.py  split_dataset.py
day1/3-eval-llm/: 3-eval-original-qwen.sh  7-check-eval-result.sh
day1/3-eval-llm/1-eval/: 1-install-nltk-data.sh  5-eval-finetuned-qwen.sh  eval-finetuned.py  eval-original.py  pyproject.toml
day1/3-eval-llm/2-vllm/: 2-launch-orginal-qwen.sh  4-launch-finetuned-qwen.sh  pyproject.toml
day1/4-train-llm/: train.py
day1/5-train-vl/: 1-run-train.sh  2-launch-vllm-for-validation.sh  3-validation.sh  train.py  validation.py
day1/6-vllm-vl/: pyproject.toml  validation.py
day2/1-launch-vllm/: 1-launch-llm.sh  2-launch-vl.sh  pyproject.toml
day2/2-validation/: 2-valid-vl.sh
(+9 files in other folders)
