[project]
name = "med-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.12.0",
    "evalscope[app]==1.4.1",
    "omegaconf==2.3.0",
    "tiktoken==0.12.0",
    "torch==2.9.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
