[project]
name = "3-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.13.0",
    "evalscope[app]==1.6.1",
    "huggingface-hub==0.34.3",
    "matplotlib==3.10.9",
    "modelscope==1.36.3",
    "omegaconf==2.3.0",
    "tiktoken==0.12.0",
    "torch==2.11.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
